Fix bottomContent not showing
-Fixed Bottom content not showing
-Changed pre to before and post to after

--- a/example/styles.css
+++ b/example/styles.css
@@ -15,3 +15,7 @@ body, html{
 .clickable{
 	cursor: pointer;
 }
+
+blockquote{
+	text-align: justify;
+}
